src/stylesheets/partials/type.less
/* Typography. */

/* Base Type. */

html, body {
	font-weight: @font-weight-base;
}

/* Headings. */

h2, h3 {
	margin-top:0;
}

h3 {
	font-weight:600;
}

/* Links. */

.see-below {
	line-height:2em;
	display:block;
	text-align:center;
	color:#FFF;
	padding:30px 0;
	opacity:0.5;
}

a.see-below:hover {
	color:#FFF;
	.rounded(10px);
	text-decoration: none; // Remove the underline effect.
	background-color: rgba(0, 0, 0, 0.03); // Highlight the bar with a darker tint.
	opacity:1; // Unfade the bar.
}

/* Description Lists */

dt {
	font-weight:inherit; // Remove the bold font default.
}

dd {
	line-height: 1.6em;
	margin-bottom:1.2em;
}

dd:last-child {
	margin-bottom:0;
}

dl {
	margin:1.2em 0;
}

.previous-apology dt {
	text-align:left !important; // Remove the right alignment.
}

// Enlarge the font size of the top update on a current apology.
.current-apology dl dt:first-child, .current-apology dl dd:nth-child(2) {
	font-size:1.1em; 
}

/* Muted Text */

.text-muted {
	// Use opacity for text-muted rather than block grey so it can be applied to any colour text.
	color:inherit;
	opacity:0.75;
}

